--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
     "postinstall": "quasar prepare"
   },
   "dependencies": {
-    "axios": "^1.2.1",
-    "pinia": "^3.0.1",
     "@quasar/extras": "^1.16.4",
+    "axios": "^1.2.1",
+    "bootstrap": "5",
+    "bootstrap5": "^1.1.9",
+    "pinia": "^3.0.1",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@types/node": "^20.5.9",
     "@quasar/app-vite": "^2.1.0",
+    "@types/node": "^20.5.9",
     "autoprefixer": "^10.4.2",
     "typescript": "~5.5.3"
   },
@@ -30,5 +32,6 @@
     "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
